@@ -32,6 +32,9 @@ If
 is set, this program will output a message reporting if it set
 .IR $RELAYCLIENT ,
 and why or why not.
+If
+.I $RELAY_CTRL_LOG_ENV
+is set, all environment variable settings are output as well.
 .SH "SEE ALSO"
 relay-ctrl-age(8),
 relay-ctrl-allow(8),
